--- a/style.css
+++ b/style.css
@@ -35,13 +35,8 @@
 
 /*
 main section */
-.main{
-    background: url(./arpa\ color.png)no-repeat; /* here you can change the 1st image */
-    background-size:cover;
-    width: 100%;
-    height: 95vh;
-}
-.main h3{
+/*some changes here*/
+.main h1{
     font-size: 4.4rem;
     font-weight: 700;
 }
